<resources>
    <string name="app_name">RecyclerHouse</string>
    <string name="imagelogo">Logo app</string>
    <string name="imagedesc2">desc2</string>
    <string name="title">RecyclerHouse</string>
    <string name="login_button">Iniciar sesión con Google</string>
    <string name="default_web_client_id">914373409842-f62d88tmnjopmn29ej9q1bkhdfbli097.apps.googleusercontent.com</string>
    <string name="floating_button">RecyclerHouse</string>
    <string name="email_hint">Ingrese correo</string>
    <string name="password_hint">Ingrese contraseña</string>
    <string name="login_text">Inicia sesión para gestionar tu reciclaje</string>
    <string name="option2">O CONTINÚA CON</string>
    <string name="loginbtn">INICIAR SESIÓN</string>
    <string name="btn_registrar">REGÍSTRATE</string>
    <string name="register_correo">Correo electrónico</string>
    <string name="register_password">Contraseña</string>
    <string name="gu_a">Guía</string>
    <string name="centros">Centros</string>
    <string name="edu">Educación</string>
    <string name="desc3">Educación</string>
    <string name="desc4">Educación</string>
    <string name="name_toolbar">RecyclerHouse</string>
    <string name="item_ver">VER</string>
    <string name="desc5">xd</string>
    <string name="desc6">guia_pue</string>
    <string name="todo">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="informaci_n_general">Información General</string>
    <string name="tipos">Tipos</string>
    <string name="beneficios">Beneficios</string>
</resources>