<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/imagelogo"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/titleLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="6"
        android:text="@string/login_text"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="140dp" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:shadowColor="@color/black"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="6"
        android:text="@string/title"
        android:textColor="@color/verde_oscuro"
        android:textSize="40sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintTop_toBottomOf="@+id/titleLogin"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_email_icon"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:minHeight="50dp"
        android:paddingStart="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/hint"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        tools:ignore="RtlSymmetry,TextContrastCheck,VisualLintTextFieldSize" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:textColorHint="@color/hint"
        android:minHeight="50dp"
        app:passwordToggleEnabled="true"
        android:textSize="16sp"
        app:passwordToggleTint="@color/hint"
        app:hintEnabled="false"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            android:autofillHints="password"
            android:drawableStart="@drawable/custom_lock_icon"
            android:drawablePadding="8dp"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:hint="@string/password_hint"
            android:textColorHint="@color/hint"
            android:inputType="textPassword"
            android:minHeight="50dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailEditText"
            tools:ignore="RtlSymmetry,VisualLintTextFieldSize" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/accederbtn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="100dp"
        android:text="@string/loginbtn"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:backgroundTint="@color/verde_oscuro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInputLayout"
        tools:ignore="TextContrastCheck,VisualLintButtonSize" />

    <Button
        android:id="@+id/btn_registrar"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/black"
        android:text="@string/btn_registrar"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accederbtn"
        tools:ignore="TextContrastCheck,VisualLintButtonSize,TextSizeCheck" />

    <TextView
        android:id="@+id/title2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="6"
        android:text="@string/option2"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/btn_registrar"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="140dp" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/shadow"
        android:drawableLeft="@drawable/ic_google_logo"
        android:drawablePadding="1dp"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:text="@string/login_button"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title2"
        tools:ignore="MissingConstraints,RtlHardcoded,RtlSymmetry,TextContrastCheck,VisualLintButtonSize,TextSizeCheck" />

    <ImageButton
        android:id="@+id/btnUCT"
        android:layout_width="140dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/imagedesc2"
        android:background="@drawable/button_border"
        android:scaleType="centerInside"
        android:src="@drawable/uct"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        tools:ignore="VisualLintBounds,TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>